# stock-tracker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: add-ticker.md  ingest.md  manage-sectors.md  remove-ticker.md
.github/workflows/: daily-refresh.yml  manual-refresh.yml
data/: glossary.json  history.json  macro.json  reports.json  sector_rotation.json  snapshots.json  tickers.json
docs/: app.js  index.html  style.css
docs/data/: bottlenecks.json  glossary.json  history.json  macro.json  removed_tickers.json  sector_rotation.json  snapshots.json  tickers.json
reports/: .processed.json  README.md
scripts/: add_ticker.py  fetch_macro.py  ingest_report.py  manage.py  refresh.py  synthesize_pillars.py  synthesize_ratings.py
